// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Error /> default should render an Error element with only the required props 1`] = `
<Styled(Box)
  alignItems="center"
  boxSize={
    Object {
      "horizontal": "medium",
    }
  }
  pad="small"
  selectable={true}
  status="none"
>
  <Paragraph
    color="white"
    size="large"
  >
    Mock error message
  </Paragraph>
</Styled(Box)>
`;

exports[`<Error /> default should render an Error element with other props 1`] = `
<Styled(Box)
  alignItems="center"
  boxSize={
    Object {
      "horizontal": "medium",
    }
  }
  onClick={[Function]}
  pad="small"
  selectable={true}
  status="none"
>
  <Paragraph
    color="white"
    size="large"
  >
    Mock error message
  </Paragraph>
</Styled(Box)>
`;
